--- a/flinkdemo/pom.xml
+++ b/flinkdemo/pom.xml
@@ -28,6 +28,13 @@
     </repositories>
     <dependencies>
 
+        <!-- https://mvnrepository.com/artifact/org.scala-lang/scala-library -->
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>2.12.7</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.12</artifactId>
@@ -90,7 +97,12 @@
             <version>2.6.19</version>
         </dependency>
 
-
+        <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-cluster -->
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-cluster_2.12</artifactId>
+            <version>2.6.19</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-rpc-akka-loader -->
         <dependency>
@@ -187,11 +199,6 @@
             </exclusions>
         </dependency>
 
-        <dependency>
-            <groupId>com.xiaomi.data</groupId>
-            <artifactId>data-platform-spec-feeds</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
 
         <dependency>
             <groupId>com.github.pcj</groupId>
@@ -205,17 +212,6 @@
             </exclusions>
         </dependency>
 
-        <dependency>
-            <groupId>com.xiaomi</groupId>
-            <artifactId>xiaomi-common-zookeeper</artifactId>
-            <version>3.0.9</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>guava</artifactId>
-                    <groupId>com.google.guava</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -268,11 +264,6 @@
             <version>3.0.0</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>3.14.2</version>
-        </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-runtime</artifactId>
