--- a/flinkdemo/pom.xml
+++ b/flinkdemo/pom.xml
@@ -19,6 +19,7 @@
         <maven-surefire-version>3.0.0-M5</maven-surefire-version>
         <maven-war-version>3.3.1</maven-war-version>
         <maven-jetty-version>10.0.6</maven-jetty-version>
+        <guava.version>17.0</guava.version>
     </properties>
     <repositories>
         <repository>
@@ -27,6 +28,12 @@
         </repository>
     </repositories>
     <dependencies>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.scala-lang/scala-library -->
         <dependency>
