--- a/flinkdemo/pom.xml
+++ b/flinkdemo/pom.xml
@@ -20,6 +20,7 @@
         <maven-war-version>3.3.1</maven-war-version>
         <maven-jetty-version>10.0.6</maven-jetty-version>
         <guava.version>17.0</guava.version>
+        <netty.version>4.0.33.Final</netty.version>
     </properties>
     <repositories>
         <repository>
@@ -28,6 +29,12 @@
         </repository>
     </repositories>
     <dependencies>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>${netty.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
