--- a/flinkdemo/pom.xml
+++ b/flinkdemo/pom.xml
@@ -4,8 +4,11 @@
     <groupId>org.example</groupId>
     <artifactId>flinkdemo</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>calc</module>
+    </modules>
     <name>flinkdemo Tapestry 5 Application</name>
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <tapestry-version>5.8.2</tapestry-version>
