--- a/flinkdemo/pom.xml
+++ b/flinkdemo/pom.xml
@@ -4,10 +4,7 @@
     <groupId>org.example</groupId>
     <artifactId>flinkdemo</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>calc</module>
-    </modules>
-    <name>flinkdemo Tapestry 5 Application</name>
+    <name>flinkdemo</name>
     <packaging>pom</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -32,6 +29,19 @@
         </repository>
     </repositories>
     <dependencies>
+
+        <dependency>
+            <groupId>com.alibaba.ververica</groupId>
+            <artifactId>ververica-connector-iceberg</artifactId>
+            <version>1.13-vvr-4.0.7</version>
+        </dependency>
+        <!-- Flink 操作Iceberg 需要的Iceberg依赖 -->
+        <dependency>
+            <groupId>org.apache.iceberg</groupId>
+            <artifactId>iceberg-flink-runtime</artifactId>
+            <version>0.12.1</version>
+            <!--<version>0.11.1</version>-->
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
         <dependency>
@@ -111,25 +121,29 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-streaming-java</artifactId>
             <version>1.15.0</version>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-table-common</artifactId>
             <version>1.15.0</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-table-runtime</artifactId>
             <version>1.15.0</version>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-kafka</artifactId>
+            <version>1.15.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-clients -->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-clients</artifactId>
             <version>1.15.0</version>
         </dependency>
 
@@ -187,7 +201,6 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-runtime</artifactId>
             <version>1.15.0</version>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -359,6 +372,14 @@
             <artifactId>delta-standalone_2.12</artifactId>
             <version>0.5.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-connector-files -->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-files</artifactId>
+            <version>1.15.0</version>
+        </dependency>
+
 
     </dependencies>
     <build>
