--- a/flinkdemo/pom.xml
+++ b/flinkdemo/pom.xml
@@ -128,6 +128,15 @@
             <artifactId>flink-table-common</artifactId>
             <version>1.15.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-parquet -->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-parquet</artifactId>
+            <version>1.15.0</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-table-runtime</artifactId>
